# Matrix-OrderBot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  chat.py  config.py  conn.py  docker-compose.yml  matrix.env  order.py  order_parser.py  pyproject.toml  requirements.txt  setup.py
orderbot/: __init__.py  db_classes.py  order.py  order_parser.py  orderbot.py  util.py
orderbotapp/: db_classes.py  dockerfile  order.py  order_parser.py  orderbot.py  requirements.txt  setup.py  util.py
sql/: create_tables.sql  db_classes.py
