[tool.pdm]
[tool.pdm.dev-dependencies]
lint = [
    "black>=22.12.0",
    "pre-commit>=2.21.0",
]

[project]
name = "Matrix-OrderBot"
version = "0.1.1"
description = "Matrix bot for take-out/delivery tracking"
authors = [
    { name = "Zayus13", email = "sven_loechte@protonmail.com" },
    { name = "Markus Sommer", email = "msommer@informatik.uni-marburg.de" }
]
dependencies = ["matrix-nio >= 0.19.0", "SQLAlchemy >= 1.4.37, < 2"]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
]

[project.urls]
Homepage = "https://github.com/umr-ds/Matrix-OrderBot"
"Bug Reports" = "https://github.com/umr-ds/Matrix-OrderBot/issues"
Source = "https://github.com/umr-ds/Matrix-OrderBot"

[project.scripts]
orderbot = "orderbot.orderbot:main"

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
